<resources>
    <string name="app_name">ShoeShop</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="new_user_checkbox_text">New User</string>
    <string name="login">Login</string>
    <string name="create_account">Create</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="no_account">No account?</string>
    <string name="sign_up">Sign up</string>
    <string name="appName">S H O E&#160; &#160;S H O P</string>
    <string name="shoes_image_content_description">One line drawing of a shoes pair</string>
    <string name="shoe_image_content_description">One line drawing of a shoes pair</string>
    <string name="password_error">Password must contain at least 4 characters.</string>
    <string name="confirm_password_error">The password confirmation does not match.</string>
    <string name="cancel">Cancel</string>
    <string name="email_error">The email should follow the pattern john@example.com.</string>

    <!-- Welcome Screen -->
    <string name="welcome_text">Welcome to \n S H O E&#160; &#160;S H O P</string>
    <string name="seek_find_enjoy">Seek. Find. Enjoy.</string>
    <string name="walk_your_colors">Walk your colors.</string>
    <string name="content_description_welcome_fab">Tap to go to Instructions</string>
    <string name="splash_of_color_content_description">Splash of color</string>

    <!-- Instructions Screen -->
    <string name="instructions_first_item_title">Discover our offering!</string>
    <string name="instructions_first_item_text1">Thousands to choose from.</string>
    <string name="instructions_first_item_text2">Find what you love ❤.</string>
    <string name="instructions_first_item_text3">Get in touch and buy.</string>
    <string name="instructions_second_item_title">Add your own</string>
    <string name="instructions_second_item_text1">Just type the details like brand, color, size.</string>
    <string name="instructions_second_item_text2">Drop your contact info, then carry on.</string>
    <string name="instructions_second_item_text3">They\'ll be in good \'feet\' &#128522;.</string>
    <string name="instructions_third_item_title">Want to keep it private?</string>
    <string name="instructions_third_item_text1">After visiting, simply log out.</string>
    <string name="instructions_third_item_text2">Nobody will ever know.</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="content_description_more_button_instructions">Icon displayed in the upper right corner in the Shoes list screen.</string>
    <string name="content_description_add_button_instructions">Button displayed in the bottom right corner of the Shoes list screen.</string>
    <string name="content_description_list_icon_instructions">List icon</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="cm">cm</string>
    <string name="content_description_shoe_item_image">Representative image for the item on sale.</string>
    <string name="logout">Logout</string>

    <!-- Shoe List Screen -->

    <string name="shoe_name">Shoe name</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="done">Done</string>
    <string name="nike">Nike</string>
    <string name="nike_air_jordan">Nike Air Jordan</string>
    <string name="size_cm">Size (cm)</string>
    <string name="invalidNameError">Fill in a name for your shoes.</string>
    <string name="invalidCompanyError">Fill in the brand/company of your shoes.</string>
    <string name="invalidSizeError">Fill in the size of your shoes.</string>
    <string name="invalidDescriptionError">Fill in a description for your shoes.</string>
    <string name="empty_list_call_to_action">Share the joy and start adding items to\nS H O E S H O P</string>
</resources>
