<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.onboarding.WelcomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            tools:context=".ui.onboarding.InstructionsFragment">

            <ImageView
                android:id="@+id/splash"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.35"
                android:contentDescription="@string/shoes_image_content_description"
                android:src="@drawable/splash_of_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/shoes"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_shoe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/splash_of_color_content_description" />

            <TextView
                android:id="@+id/welcome_text"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                style="@style/ShoeStoreNameStyle"
                android:layout_gravity="center_horizontal"
                android:text="@string/appName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/splash" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:elevation="2dp"
                app:cardBackgroundColor="#e4e9ff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/list_image_instructions"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_baseline_list_24"
                        app:layout_constraintBottom_toBottomOf="@+id/instructions_list_text"
                        app:layout_constraintEnd_toStartOf="@+id/instructions_list_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/instructions_list_text"
                        app:tint="@android:color/black"
                        android:contentDescription="@string/content_description_list_icon_instructions" />

                    <LinearLayout
                        android:id="@+id/instructions_list_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/list_image_instructions"
                        app:layout_constraintTop_toTopOf="parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/instructions_first_item_title"
                            android:textColor="@android:color/black"
                            android:layout_margin="8dp"
                            android:textStyle="bold"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginStart="8dp"
                            android:text="@string/instructions_first_item_text1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginStart="8dp"
                            android:text="@string/instructions_first_item_text2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginStart="8dp"
                            android:text="@string/instructions_first_item_text3" />
                    </LinearLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_button_instructions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_baseline_add_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/instructions_add_button_text"
                        app:layout_constraintBottom_toBottomOf="@+id/instructions_add_button_text"
                        android:contentDescription="@string/content_description_add_button_instructions" />

                    <LinearLayout
                        android:id="@+id/instructions_add_button_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/instructions_list_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/add_button_instructions">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/instructions_second_item_title"
                            android:textColor="@android:color/black"
                            android:layout_margin="8dp"
                            android:textStyle="bold"
                            android:gravity="end"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginEnd="8dp"
                            android:gravity="end"
                            android:text="@string/instructions_second_item_text1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginEnd="8dp"
                            android:gravity="end"
                            android:text="@string/instructions_second_item_text2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginEnd="8dp"
                            android:gravity="end"
                            android:text="@string/instructions_second_item_text3" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/more_button_instructions"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_margin="8dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/ic_baseline_more_vert_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/instructions_more_button_text"
                        app:layout_constraintBottom_toBottomOf="@+id/instructions_more_button_text"
                        app:tint="@android:color/black"
                        android:contentDescription="@string/content_description_more_button_instructions" />

                    <LinearLayout
                        android:id="@+id/instructions_more_button_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/more_button_instructions"
                        app:layout_constraintTop_toBottomOf="@id/instructions_add_button_text"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/instructions_third_item_title"
                            android:textColor="@android:color/black"
                            android:layout_margin="8dp"
                            android:textStyle="bold"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginStart="8dp"
                            android:text="@string/instructions_third_item_text1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:layout_marginStart="8dp"
                            android:text="@string/instructions_third_item_text2" />

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/get_started_button"
                        style="@style/Widget.ShoeStore.Button"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/let_s_go"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/instructions_more_button_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>