<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.onboarding.WelcomeFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="24dp">

                        <ImageView
                            android:id="@+id/splash"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:src="@drawable/splash_of_color"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHeight_percent="0.35"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/shoes_image_content_description" />

                        <ImageView
                            android:id="@+id/shoes"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:src="@drawable/img_shoe"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHeight_percent="0.35"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/splash_of_color_content_description" />

                        <TextView
                            android:id="@+id/welcome_text"
                            style="@style/ShoeStoreNameStyle"
                            android:gravity="center_horizontal"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/welcome_text"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/moto_text1"
                            style="@style/ShoeStoreMottoStyle"
                            android:text="@string/seek_find_enjoy"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/splash" />

                        <TextView
                            android:id="@+id/moto_text2"
                            android:text="@string/walk_your_colors"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/moto_text1"
                            style="@style/ShoeStoreMottoStyle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_navigate_next_24"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="24dp"
                    android:contentDescription="@string/content_description_welcome_fab" />
        </FrameLayout>
</layout>